@@ -26,3 +26,10 @@ Changes made since version 0.8.1 was released:
 * %pushd/%popd behave differently; now "pushd /foo" pushes CURRENT directory 
   and jumps to /foo. The current behaviour is closer to the documented 
   behaviour, and should not trip anyone.
+  
+Version 0.8.3
+=============
+  
+* pydb is now disabled by default (due to %run -d problems). You can enable
+it by passing -pydb command line argument to IPython. Note that setting
+it in config file won't work.
